@@ -21,6 +21,7 @@ lzma
 lzma2eva
 makedevs
 md5sum
+patchelf
 sfk
 sha1sum
 sha256sum
