@@ -31,6 +31,7 @@ Latest changes:
              an ext2 filesystem image as a normal (non-root) user
   * squashfs-tools-4.3: a special version of squashfs-tools modified to support AVM-BE format
   * bzimage2eva / eva2bzimage: conversion tools for PUMA6 kernels
+  * patchelf: small utility to modify the dynamic linker and RPATH of ELF executables
 
 - New patches (read online help for more info):
 
